--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -24,7 +24,7 @@
                     <span class='heading-primary-sub'>is where life happens</span>
                 </h1>
 
-                <a href="#" class="btn btn-white"> Discover Shit</a>
+                <a href="#" class="btn btn-white btn-animated"> Discover Shit</a>
             </div>
         </header>        
     </body>
