--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -31,67 +31,36 @@
       </div>
     </header>
 
-    <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">
-          Col 1 of 2
-        </div>
-        <div class="col-1-of-2">
-          Col 2 of 2
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 2 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 3 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-2-of-3">
-          Col 2 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 2 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 3 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 4 of 4
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 2 of 4
-        </div>
-        <div class="col-2-of-4">
-          Col 3 of 4
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-3-of-4">
-          Col 3 of 4
-        </div>
-      </div>
-    </section>
+    <main>
+        <section class="section-about">
+          <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Exciting tours for boring ass people
+            </h2>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                  You're goin to really hate nature                 </h3>
+
+                  <p class="paragraph">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas, suscipit!
+                  </p>
+                </h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                  Live adventures like you never wanted to before                 </h3>
+
+                  <p class="paragraph">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas, suscipit!
+                  </p>
+                  <a href="" class="btn-text">Don't Click</a>
+              </div>
+              <div class="col-1-of-2">
+                Image Composition 
+              </div>
+            </div>
+        </section>
+    </main>
   </body>
 </html>
