--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -65,6 +65,55 @@
               </div>
             </div>
         </section>
+
+        <section class="section-features">
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class=" u-margin-bottom-small">
+                  Fuck The World 
+                </h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-compass"></i>
+                <h3 class=" u-margin-bottom-small">
+                  Fuck Nature 
+                </h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-map"></i>
+                <h3 class=" u-margin-bottom-small">
+                  Fuck Your Way
+                </h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-heart"></i>
+                <h3 class=" u-margin-bottom-small">
+                  Fuck A Healthier Life 
+                </h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
   </body>
 </html>
