--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -1,119 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
-    <title>Natours | Exciting tours for adventurous people</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+  <link rel="stylesheet" href="css/icon-font.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+
+  <title>Natours | Exciting tours for adventurous people</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__logo-box">
+      <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+    </div>
+
+    <div class="header__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">Outdoors</span>
+        <span class="heading-primary--sub">is where life happens</span>
+      </h1>
+
+      <a href="#" class="btn btn--white btn--animated"> Discover Shit</a>
+    </div>
+  </header>
+
+  <main>
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Exciting tours for boring ass people
+        </h2>
       </div>
 
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main">Outdoors</span>
-          <span class="heading-primary--sub">is where life happens</span>
-        </h1>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            You're goin to really hate nature </h3>
 
-        <a href="#" class="btn btn--white btn--animated"> Discover Shit</a>
+          <p class="paragraph">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti
+            blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas,
+            suscipit!
+          </p>
+          </h3>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Live adventures like you never wanted to before </h3>
+
+          <p class="paragraph">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti
+            blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas,
+            suscipit!
+          </p>
+          <a href="" class="btn-text">Don't Click</a>
+        </div>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+          </div>
+        </div>
       </div>
-    </header>
+    </section>
 
-    <main>
-        <section class="section-about">
-          <div class="u-center-text u-margin-bottom-big">
+    <section class="section-features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <h3 class=" u-margin-bottom-small">
+              Fuck The World
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class=" u-margin-bottom-small">
+              Fuck Nature
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class=" u-margin-bottom-small">
+              Fuck Your Way
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class=" u-margin-bottom-small">
+              Fuck A Healthier Life
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
-                Exciting tours for boring ass people
+             Most Unpopular Tours
             </h2>
           </div>
-
-          <div class="row">
-              <div class="col-1-of-2">
-                <h3 class="heading-tertiary u-margin-bottom-small">
-                  You're goin to really hate nature                 </h3>
-
-                  <p class="paragraph">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas, suscipit!
-                  </p>
-                </h3>
-                <h3 class="heading-tertiary u-margin-bottom-small">
-                  Live adventures like you never wanted to before                 </h3>
-
-                  <p class="paragraph">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio a, reiciendis quia ad est, corrupti blanditiis animi autem nobis ullam quod aliquid distinctio nam fuga perspiciatis, incidunt veniam. Quas, suscipit!
-                  </p>
-                  <a href="" class="btn-text">Don't Click</a>
-              </div>
-              <div class="col-1-of-2">
-                <div class="composition">
-                  <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                  <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                  <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
-                </div>
-              </div>
-            </div>
-        </section>
-
-        <section class="section-features">
-          <div class="row">
-            <div class="col-1-of-4">
-              <div class="feature-box">
-                <i class="feature-box__icon icon-basic-world"></i>
-                <h3 class=" u-margin-bottom-small">
-                  Fuck The World 
-                </h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
-                </p>
-              </div>
-            </div>
-            <div class="col-1-of-4">
-              <div class="feature-box">
-                <i class="feature-box__icon icon-basic-compass"></i>
-                <h3 class=" u-margin-bottom-small">
-                  Fuck Nature 
-                </h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
-                </p>
-              </div>
-            </div>
-            <div class="col-1-of-4">
-              <div class="feature-box">
-                <i class="feature-box__icon icon-basic-map"></i>
-                <h3 class=" u-margin-bottom-small">
-                  Fuck Your Way
-                </h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
-                </p>
-              </div>
-            </div>
-            <div class="col-1-of-4">
-              <div class="feature-box">
-                <i class="feature-box__icon icon-basic-heart"></i>
-                <h3 class=" u-margin-bottom-small">
-                  Fuck A Healthier Life 
-                </h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur consequuntur 
-                </p>
-              </div>
-            </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">Card Text</div>
+            <div class="card__side card__side--back card__side--back-1">Card Text</div>
           </div>
-        </section>
-    </main>
-  </body>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">Card Text</div>
+            <div class="card__side card__side--back card__side--back-2">Card Text</div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">Card Text</div>
+            <div class="card__side card__side--back card__side--back-3">Card Text</div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
