[Section 5]: Complete Building Tours Section

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -118,30 +118,106 @@
       </div>
     </section>
     <section class="section-tours">
-        <div class="u-center-text u-margin-bottom-big">
-            <h2 class="heading-secondary">
-             Most Unpopular Tours
-            </h2>
-          </div>
+      <div class="u-center-text u-margin-top-huge u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Most Unpopular Tours
+        </h2>
+      </div>
       <div class="row">
         <div class="col-1-of-3">
           <div class="card">
-            <div class="card__side card__side--front">Card Text</div>
-            <div class="card__side card__side--back card__side--back-1">Card Text</div>
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1">
+                  The Sea Explorer</h4>
+              </span>
+              <div class="card__details">
+                <ul>
+                  <li>Fuck</li>
+                  <li>this</li>
+                  <li>shit</li>
+                  <li>man!</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$297</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now!</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-1-of-3">
           <div class="card">
-            <div class="card__side card__side--front">Card Text</div>
-            <div class="card__side card__side--back card__side--back-2">Card Text</div>
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2">
+                  The Forest Explorer</h4>
+              </span>
+              <div class="card__details">
+                <ul>
+                  <li>Bugs</li>
+                  <li>Snakes</li>
+                  <li>Bears</li>
+                  <li>Death</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$666</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now!</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-1-of-3">
           <div class="card">
-            <div class="card__side card__side--front">Card Text</div>
-            <div class="card__side card__side--back card__side--back-3">Card Text</div>
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3">
+                  The Snow Explorer</h4>
+              </span>
+              <div class="card__details">
+                <ul>
+                  <li>Swallow</li>
+                  <li>huge</li>
+                  <li>loads</li>
+                  <li>of</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$616</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now!</a>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+
+      <div class="u-center-text u-margin-top-big">
+        <a href="" class="btn btn--green">Discover All Tours</a>
       </div>
     </section>
   </main>
