[Section 5]: Complete Building the Story Section

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -215,10 +215,59 @@
           </div>
         </div>
       </div>
-
       <div class="u-center-text u-margin-top-big">
         <a href="" class="btn btn--green">Discover All Tours</a>
       </div>
+    </section>
+    <section class="section-stories">
+      <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+          <source src="img/video.mp4" type="video/mp4">
+          <source src="img/video.webm" type="video/webm">
+            Your browser is not supported
+        </video>
+      </div>
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          We Make People Miserable
+        </h2>
+      </div>
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+            <figcaption class="story__caption">
+              Mary Smith
+            </figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">My family and I almost died!!</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis unde eaque.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+            <figcaption class="story__caption">
+              John Doe
+            </figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">I was stranded for weeks!!</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis unde eaque.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="u-center-text">
+        <a href="#" class="btn-text">
+          Read other horror stories
+        </a></div>
     </section>
   </main>
 </body>
