--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -224,7 +224,7 @@
         <video class="bg-video__content" autoplay muted loop>
           <source src="img/video.mp4" type="video/mp4">
           <source src="img/video.webm" type="video/webm">
-            Your browser is not supported
+          Your browser is not supported
         </video>
       </div>
       <div class="u-center-text u-margin-bottom-big">
@@ -243,7 +243,11 @@
           <div class="story__text">
             <h3 class="heading-tertiary u-margin-bottom-small">My family and I almost died!!</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis unde eaque.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas
+              fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum
+              animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum
+              architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis
+              unde eaque.
             </p>
           </div>
         </div>
@@ -259,7 +263,11 @@
           <div class="story__text">
             <h3 class="heading-tertiary u-margin-bottom-small">I was stranded for weeks!!</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis unde eaque.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ea dolorem iusto facere voluptas
+              fugit illum in perferendis quia! Beatae magni et placeat blanditiis dolorum doloremque optio rerum earum
+              animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam modi tempore non impedit ut cum
+              architecto, quos vero exercitationem officia iure quo in excepturi, pariatur earum repudiandae veritatis
+              unde eaque.
             </p>
           </div>
         </div>
@@ -269,7 +277,64 @@
           Read other horror stories
         </a></div>
     </section>
+    <section class="section-book">
+      <div class="row">
+        <div class="book">
+          <div class="book__form">
+            <div class="u-margin-top-medium u-margin-bottom-medium">
+              <h2 class="heading-secondary">
+                Sign Your Life Away
+              </h2>
+            </div>
+            <form action="" class="form">
+              <div class="form__group"><input type="text" class="form__input" placeholder="Full Name" id="name"><label
+                  for="name" class="form__label">Full Name</label></div>
+              <div class="form__group"><input type="email" class="form__input" placeholder="Email Address" id="email"
+                  required><label for="email" class="form__label">Email Address</label></div>
+              <div class="form__group">
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="small" name="size">
+                  <label for="small" class="form__radio-label">
+                    <span class="form__radio-button"></span>
+                    Small groups</label>
+                </div>
+                <div class="form__radio-group u-margin-bottom-small u-">
+                  <input type="radio" class="form__radio-input" id="large" name="size">
+                  <label for="large" class="form__radio-label">
+                    Large groups <span class="form__radio-button"></span>
+                  </label>
+                </div>
+              </div>
+              <div class="form__group"><button class="btn btn--green">Next Step &rarr;</button></div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__logo-box">
+      <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+    </div>
+    <div class="row">
+      <div class="col-1-of-2">
+        <div class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-1-of-2">
+        <div class="footer__copyright footer__navigation">
+          Built by <a href="#" class="footer__link">TYMG</a> Copyright &copy; No One
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
