[ Section 5 ]: Completes Pop Up pt. 1

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -352,6 +352,23 @@
       </div>
     </div>
   </footer>
+
+  <div class="popup">
+    <div class="popup__content">
+      <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="" class="popup__img"><img src="img/nat-9.jpg" alt="" class="popup__img">
+      </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small"> Important &ndash; Please read these terms before booking </h3>
+          <p class="popup__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam in arcu cursus euismod quis viverra nibh cras. Eu facilisis sed odio morbi quis commodo odio. Porta nibh venenatis cras sed felis eget velit aliquet. Elit at imperdiet dui accumsan sit. Nulla facilisi nullam vehicula ipsum a arcu. A erat nam at lectus. Enim eu turpis egestas pretium aenean pharetra magna ac. Lectus mauris ultrices eros in cursus turpis. Amet nulla facilisi morbi tempus. Ut tristique et egestas quis. Nunc faucibus a pellentesque sit amet porttitor eget.
+          </p>
+          <a href="#" class="btn btn--green">Book Now</a>
+        </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
