--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -43,7 +43,7 @@
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
 
-      <a href="#" class="btn btn--white btn--animated"> Discover Shit</a>
+      <a href="section-tours" class="btn btn--white btn--animated"> Discover Shit</a>
     </div>
   </header>
 
@@ -134,7 +134,7 @@
         </div>
       </div>
     </section>
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-top-huge u-margin-bottom-big">
         <h2 class="heading-secondary">
           Most Unpopular Tours
@@ -166,7 +166,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$297</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$666</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -226,7 +226,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$616</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -353,12 +353,13 @@
     </div>
   </footer>
 
-  <div class="popup">
+  <div class="popup" id="popup">
     <div class="popup__content">
       <div class="popup__left">
         <img src="img/nat-8.jpg" alt="" class="popup__img"><img src="img/nat-9.jpg" alt="" class="popup__img">
       </div>
         <div class="popup__right">
+          <a href="#section_tours" class="popup__close">&times;</a>
           <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
           <h3 class="heading-tertiary u-margin-bottom-small"> Important &ndash; Please read these terms before booking </h3>
           <p class="popup__text">
